# nary-tree

./: .gitignore  Cargo.toml  README.md
examples/: basic.rs  compact.rs  formatted.rs
src/: core_tree.rs  lib.rs  slab.rs  tree.rs
src/node/: node_mut.rs  node_ref.rs
