[package]
name = "slab_tree"
version = "0.4.0"
authors = ["Ian <iwburns8@gmail.com>", "David Cohen <dacohen@pm.me>"]
description = "A vec-backed tree structure with tree-specific generational indexes."
documentation = "https://docs.rs/slab_tree"
repository = "https://github.com/osimarr/slab-tree"
readme = "README.md"
keywords = ["tree", "slab", "slab-tree"]
categories = ["data-structures"]
license = "MIT"
edition = "2021"

[dependencies]
slab = "~0.4"
snowflake = "~1.3"
